test/invalid/comment_slashstar_unfinished.d
//T error: comment_slashstar_unfinished.d:4:0:
//T error: Unexpected end of file.

/* This is an unfinished comment
